Removed api-docs
