# swagger.json
@@ -22,7 +22,16 @@
         }
       }
     },
-  
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/employees/": {
       "get": {
         "description": "",
@@ -141,7 +150,7 @@
                 "department": {
                   "example": "any"
                 },
-                "appointedDate": {
+                "appointmentDate": {
                   "example": "any"
                 },
                 "salary": {
